# playground

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
analyses/: README.md
classes/: README.md
data/: README.md
examples/: README.md
notebooks/: README.md
playground/data/: README.md
playground/stdlib/: utils.py
stdlib/: README.md  utils.py
tests/: README.md  test_utils.py
tutorials/: README.md
tutorials/django-vscode/hello/: urls.py  views.py
tutorials/django-vscode/hello/migrations/: 0001_initial.py
tutorials/django-vscode/hello/templates/hello/: layout.html
tutorials/django-vscode/web_project/: settings.py  urls.py
