[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#########################################################################################
# Poetry metadata
#########################################################################################

[tool.poetry]
name = "playground"
version = "0.1.0"
description = "Coding sandbox for learning and experimentation."
authors = ["Meghan Thommes <meghan.thommes@gmail.com>"]
readme = "README.md"

#########################################################################################
# Poetry build & dependencies
#########################################################################################

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
django      = "^5.0.7"
fastapi     = "^0.112.0"
ipython     = "^8.26.0"
ipykernel   = "^6.29.5"
matplotlib  = "^3.9.2"
numpy       = "^2.1.0"
pandas      = "^2.2.2"
plotly      = "^5.23.0"
requests    = "^2.32.3"
scipy       = "^1.14.1"
seaborn     = "^0.13.2"
statsmodels = "^0.14.2"
uvicorn     = "^0.30.5"

[tool.poetry.group.test.dependencies]
add-trailing-comma    = "^3.1.0"
autopep8              = "^2.3.1"
bandit                = "^1.7.9"
black                 = "^24.8.0"
coverage              = "^7.6.1"
flake8                = "^7.1.1"
flake8-bugbear        = "^24.8.19"
flake8-comprehensions = "^3.15.0"
flake8-docstrings     = "^1.7.0"
flake8-simplify       = "^0.21.0"
isort                 = "^5.13.2"
mypy                  = "^1.11.2"
nbqa                  = "^1.9.0"
pre-commit            = "^3.8.0"
pytest                = "^8.3.2"
pytest-cov            = "^5.0.0"
pytest-randomly       = "^3.15.0"
pyupgrade             = "^3.17.0"

#########################################################################################
# Testing
#########################################################################################

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

#########################################################################################
# Style checking
#########################################################################################

[tool.coverage.paths]
source = ["playground"]

[tool.coverage.run]
source = ["playground"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 119
target-version = ["py312"]

[tool.isort]
line_length = 119
profile = "black"

[tool.pyupgrade]
target_version = "py38-plus"

[tool.pycodestyle]
max-line-length = 119
statistics = true

[mypy]
check_untyped_defs = true
strict_optional = true
